--- a/docs/static/css/inter.css
+++ b/docs/static/css/inter.css
@@ -54,7 +54,7 @@
   font-family: "Inter";
   font-style: italic;
   font-weight: 400;
-  src: url("/docs../fonts/inter/Inter-Italic.woff2") format("woff2"),
+  src: url("../fonts/inter/Inter-Italic.woff2") format("woff2"),
     url("../fonts/inter/Inter-Italic.woff") format("woff");
 }
 
