--- a/docs/static/css/ibm-plex.css
+++ b/docs/static/css/ibm-plex.css
@@ -1,1 +1,35 @@
-@font-face{font-family:'IBM Plex Sans';font-style:normal;font-weight:400;src:local('IBM Plex Sans'),local('IBMPlexSans'),url(/static/fonts/ibm-plex-sans.ttf) format('truetype')}@font-face{font-family:'IBM Plex Sans';font-style:italic;font-weight:400;src:local('IBM Plex Sans Italic'),local('IBMPlexSans-Italic'),url(/static/fonts/ibm-plex-sans-italic.ttf) format('truetype')}@font-face{font-family:'IBM Plex Sans';font-style:normal;font-weight:600;src:local('IBM Plex Sans SemiBold'),local('IBMPlexSans-SemiBold'),url(/static/fonts/ibm-plex-sans-semibold.ttf) format('truetype')}@font-face{font-family:'IBM Plex Sans';font-style:italic;font-weight:600;src:local('IBM Plex Sans SemiBold Italic'),local('IBMPlexSans-SemiBoldItalic'),url(/static/fonts/ibm-plex-sans-semibold-italic.ttf) format('truetype')}@font-face{font-family:'IBM Plex Mono';font-style:normal;font-weight:400;src:local('IBM Plex Mono'),local('IBMPlexMono'),url(/static/fonts/ibm-plex-mono.ttf) format('truetype')}
+@font-face {
+  font-family: 'IBM Plex Sans';
+  font-style: normal;
+  font-weight: 400;
+  /* https://fonts.gstatic.com/s/ibmplexsans/v4/zYXgKVElMYYaJe8bpLHnCwDKhdHeEA.ttf */
+  src: local('IBM Plex Sans'), local('IBMPlexSans'), url(/static/fonts/ibm-plex-sans.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'IBM Plex Sans';
+  font-style: italic;
+  font-weight: 400;
+  /* https://fonts.gstatic.com/s/ibmplexsans/v4/zYX-KVElMYYaJe8bpLHnCwDKhdTuF6ZM.ttf */
+  src: local('IBM Plex Sans Italic'), local('IBMPlexSans-Italic'), url(/static/fonts/ibm-plex-sans-italic.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'IBM Plex Sans';
+  font-style: normal;
+  font-weight: 600;
+  /* https://fonts.gstatic.com/s/ibmplexsans/v4/zYX9KVElMYYaJe8bpLHnCwDKjQ76AIFscQ.ttf */
+  src: local('IBM Plex Sans SemiBold'), local('IBMPlexSans-SemiBold'), url(/static/fonts/ibm-plex-sans-semibold.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'IBM Plex Sans';
+  font-style: italic;
+  font-weight: 600;
+  /* https://fonts.gstatic.com/s/ibmplexsans/v4/zYX7KVElMYYaJe8bpLHnCwDKhdTmyIJcdvfr.ttf */
+  src: local('IBM Plex Sans SemiBold Italic'), local('IBMPlexSans-SemiBoldItalic'), url(/static/fonts/ibm-plex-sans-semibold-italic.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'IBM Plex Mono';
+  font-style: normal;
+  font-weight: 400;
+  /* https://fonts.gstatic.com/s/ibmplexmono/v4/-F63fjptAgt5VM-kVkqdyU8n1i8q0g.ttf */
+  src: local('IBM Plex Mono'), local('IBMPlexMono'), url(/static/fonts/ibm-plex-mono.ttf) format('truetype');
+}
