--- a/docs/static/css/dejavu.css
+++ b/docs/static/css/dejavu.css
@@ -1,1 +1,6 @@
-@font-face{font-family:'DejaVu Sans Mono for Powerline';font-style:normal;font-weight:400;src:local('DejaVu Sans Mono for Powerline'),url(/static/fonts/dejavu-sans-mono-for-powerline.ttf) format('truetype')}
+@font-face {
+  font-family: 'DejaVu Sans Mono for Powerline';
+  font-style: normal;
+  font-weight: 400;
+  src: local('DejaVu Sans Mono for Powerline'), url(/static/fonts/dejavu-sans-mono-for-powerline.ttf) format('truetype');
+}
