--- a/docs/static/css/style.css
+++ b/docs/static/css/style.css
@@ -2,6 +2,7 @@ html {
   --unit: 0.25rem;
   overflow-y: scroll;
 }
+
 .ibm-plex-sans {
   font-family: "IBM Plex Sans", sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -34,11 +35,16 @@ a {
   max-width: calc(var(--unit) * 320);
 }
 .poster ul.ep-nav a {
-  opacity: 0.1;
+  opacity: 0.10;
 }
 .poster ul.ep-nav a:hover {
-  opacity: 1;
+  opacity: 1.00;
 }
+
+/* now pre code blocks allow for 80 columns + the scroll bar
+ * in my half-screen browser window...
+ * But it messes up with unicode box drawing characters...
+ */
 code {
   font-size: 0.85em;
 }
