Add generated components to docs/.

--- a/docs/components/index.html
+++ b/docs/components/index.html
@@ -71,6 +71,11 @@
                         Example, sidebar
                     </a>
                 </li>
+                <li>
+                    <a href="example--side-panel.html">
+                        Example, side panel
+                    </a>
+                </li>
             </ul>
         </div>
     </body>
