--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -9,3 +9,10 @@
     }
   }
 }
+
+.editable-pre[contenteditable="true"]:active,
+.editable-pre[contenteditable="true"]:focus {
+  background: #fff;
+  box-shadow: 0 0 0 1px #96ccff;
+  outline: none;
+}
