Add generated components to docs/.

--- a/docs/components/navigation.html
+++ b/docs/components/navigation.html
@@ -17,31 +17,31 @@
         <div class="mw9 center ph4 lh-copy">
             <header class="pv4">
                 <nav class="flex align-items-center lh-copy">
-                    <a class="mr3 link black hover-blue" href=".">
+                    <a class="link mr3 black hover-blue" href=".">
                         Entrypoint
                     </a>
-                    <a class="mr3 link black hover-blue" href="projects/waveguide.html">
+                    <a class="link mr3 black hover-blue" href="projects/waveguide.html">
                         Waveguide
                     </a>
-                    <a class="mr3 link black hover-blue" href="projects/station.html">
+                    <a class="link mr3 black hover-blue" href="projects/station.html">
                         Station
                     </a>
-                    <a class="mr3 link black hover-blue" href="nubs/work.html">
+                    <a class="link mr3 black hover-blue" href="nubs/work.html">
                         Work
                     </a>
-                    <a class="mr3 link black hover-blue" href="nubs/">
+                    <a class="link mr3 black hover-blue" href="nubs/">
                         Nubs
                     </a>
-                    <a class="mr3 link black hover-blue" href="decks/">
+                    <a class="link mr3 black hover-blue" href="decks/">
                         Decks
                     </a>
-                    <a class="mr3 link black hover-blue" href="edit/">
+                    <a class="link mr3 black hover-blue" href="edit/">
                         Edit
                     </a>
-                    <a class="mr3 link black hover-blue" href="more.html">
+                    <a class="link mr3 black hover-blue" href="more.html">
                         More
                     </a>
-                    <a class="mr3 link black hover-blue" href="README.html">
+                    <a class="link mr3 black hover-blue" href="README.html">
                         About
                     </a>
                 </nav>
