--- a/docs/components/index.html
+++ b/docs/components/index.html
@@ -76,6 +76,11 @@
                         Example, side panel
                     </a>
                 </li>
+                <li>
+                    <a href="example--template.html">
+                        Example, template
+                    </a>
+                </li>
             </ul>
         </div>
     </body>
