--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -55,3 +55,29 @@
   outline: none;
   z-index: 0;
 }
+
+.pull-quote {
+  position: relative;
+}
+
+.pull-quote:before {
+  content: "“";
+  position: absolute;
+  top: -2rem;
+  left: 0;
+  font-size: 5rem;
+  font-weight: bold;
+  z-index: -1;
+  opacity: 30%;
+}
+
+.pull-quote:after {
+  content: "„";
+  position: absolute;
+  right: 0;
+  bottom: -2rem;
+  font-size: 5rem;
+  font-weight: bold;
+  z-index: -1;
+  opacity: 30%;
+}
