Prefix .inter with .hy-

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,6 +1,6 @@
 @import url("https://rsms.me/inter/inter.css");
 
-.inter {
+.hy-inter {
   font-family: "Inter", -apple-system, BlinkMacSystemFont, sans-serif;
 }
 
