--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -4,7 +4,7 @@
   font-family: "Inter", -apple-system, BlinkMacSystemFont, sans-serif;
 }
 
-.ff-tab-num {
+.hy-ff-tab-num {
   font-feature-settings: "tnum" 1;
 }
 
