Update .hy-blue to use #0000ff

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -3,7 +3,7 @@
 /* colours - text */
 
 .hy-blue {
-  color: #1a4fcb;
+  color: #0000ff;
 }
 
 .hy-red {
@@ -21,7 +21,7 @@
 /* colours - bg */
 
 .hy-bg-blue {
-  background: #1a4fcb;
+  background: #0000ff;
 }
 
 .hy-bg-red {
