--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -128,3 +128,15 @@
   z-index: -1;
   opacity: 30%;
 }
+
+.modal {
+  display: none;
+}
+
+.modal-state {
+  display: none;
+}
+
+.modal-state:checked + .modal {
+  display: flex;
+}
