--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -129,8 +129,16 @@
   opacity: 30%;
 }
 
+.mh-75 {
+  max-height: 75vh;
+}
+
 .modal {
   display: none;
+}
+
+.modal-body {
+  max-height: 24rem;
 }
 
 .modal-state {
