--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -128,3 +128,10 @@
   z-index: -1;
   opacity: 30%;
 }
+
+.editable:active,
+.editable:focus {
+  background: #fff;
+  box-shadow: 0 0 0 1px #96ccff;
+  outline: none;
+}
