--- a/itcss/templates/index.pug
+++ b/itcss/templates/index.pug
@@ -2,6 +2,6 @@ doctype html
 
 html
   head
-    link(rel="stylesheet" href="/css/main.css")
+    link(rel="stylesheet" href="/static/css/main.css")
   body
     h1 Hello
