Almost completed the static-binaries.html example.
It is almost pixel-perfect compared to the Figma example.

This deviates slightly from the existing page at
https://noteed.com/notes/static-binaries.html
but that's ok, that one can be modified later so that everything match.

--- a/itcss/templates/static-binaries.pug
+++ b/itcss/templates/static-binaries.pug
@@ -4,7 +4,7 @@ html
   head
     link(rel="stylesheet" href="/static/css/main.css")
   body
-    .c-display
+    .o-container--small.c-display
       h1 Static binaries
 
       p If you consider adopting a programming language, consider one where you can create statically-linked executables. This makes things so much easier.
@@ -21,14 +21,14 @@ html
 
       p If you use Docker to deploy, you probably want a private registry, which is another piece to maintain. Static binaries are trivial to host on a static site. Or to mirror. And so on. Simplicity goes a long way.
 
-      hr
+      hr.u-spacer-bottom-m
 
       p See also: <a>In praise of simplicity</a>
 
-      hr
+      hr.u-spacer-bottom-m
 
       p Related: <a>Learn packaging</a>
 
-      hr
+      hr.u-spacer-top-l.u-spacer-bottom-l
 
-      p © Võ Minh Thu, 2017-2021.
+      p.u-spacer-bottom-m © Võ Minh Thu, 2017-2021.
