--- a/itcss/scss/c-display.scss
+++ b/itcss/scss/c-display.scss
@@ -13,7 +13,9 @@
   font-size: 3rem;
   line-height: 1.25;
   letter-spacing: -0.05em;
-  margin: 4.8rem 0 3.2rem;
+  margin: 7.5rem 0 2rem; // Vertical margin is temporary, for the
+                         // static-binaries.html example, until
+                         // the navigation is added.
 }
 
 .c-display h2 {
@@ -21,7 +23,7 @@
   font-size: 2.25rem;
   line-height: 1.25;
   letter-spacing: -0.05em;
-  margin: 4.8rem 0 3.2rem;
+  margin: 2.25rem 0 1.5rem;
 }
 
 .c-display p {
@@ -46,11 +48,12 @@
   font-weight: 400;
   font-size: 1rem;
   line-height: 1.5;
+  margin: 1rem 0;
 }
 
 .c-display hr {
   width: 8rem;
   border: none;
   height: .125rem;
-  margin: 0;
+  margin: 2.125rem 0;
 }
