--- a/itcss/templates/c-toolbar.pug
+++ b/itcss/templates/c-toolbar.pug
@@ -4,7 +4,7 @@ html
   head
     link(rel="stylesheet" href="/static/css/main.css")
   body
-    .o-container--small.c-display
+    .o-container--small.c-content
       h1 Horizontal toolbars
 
       p Classes to create an horizontal toolbar.
@@ -22,7 +22,7 @@ html
       p
         | The simplest toolbar, with a single element. This
         | should match the above paragraph, but with additional
-        | vertical spacing (I don't know why; this is probably because we're in c-display).
+        | vertical spacing (I don't know why; this is probably because we're in c-content).
       .c-toolbar
         .c-toolbar__left
           .c-toolbar__item
