--- a/itcss/templates/index.pug
+++ b/itcss/templates/index.pug
@@ -4,5 +4,5 @@ html
   head
     link(rel="stylesheet" href="/static/css/main.css")
   body
-    .c-display
+    .c-content
       h1 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus in odio orci. Vestibulum dignissim malesuada molestie.
