--- a/itcss/templates/static-binaries.pug
+++ b/itcss/templates/static-binaries.pug
@@ -4,7 +4,7 @@ html
   head
     link(rel="stylesheet" href="/static/css/main.css")
   body
-    .o-container--small.c-display
+    .o-container--small.c-content
       h1 Static binaries
 
       p If you consider adopting a programming language, consider one where you can create statically-linked executables. This makes things so much easier.
