--- a/itcss/templates/u-placeholder.pug
+++ b/itcss/templates/u-placeholder.pug
@@ -4,7 +4,7 @@ html
   head
     link(rel="stylesheet" href="/static/css/main.css")
   body
-    .o-container--small.c-display
+    .o-container--small.c-content
       h1 Placeholders
 
       p Classes to style placeholder divs.
