Add a c-base class.

--- a/itcss/templates/c-content.pug
+++ b/itcss/templates/c-content.pug
@@ -7,7 +7,9 @@ html
     .o-container--small.c-content
       h1 Web page typography
 
-      p A single class to style textual elements such as h1 and p.
+      p
+        | A single class to style textual elements such as h1 and p.
+        | Use c-base instead to wrap components.
 
       hr
 
