--- a/itcss/templates/c-toolbar.pug
+++ b/itcss/templates/c-toolbar.pug
@@ -4,76 +4,96 @@ html
   head
     link(rel="stylesheet" href="/static/css/main.css")
   body
-    .o-container--small.c-content
-      h1 Horizontal toolbars
+    .o-container--small
+      .c-content
+        h1 Horizontal toolbars
 
-      p Classes to create an horizontal toolbar.
+        p
+          | Classes to create an horizontal toolbar. This is supposed
+          | to be used within c-base.
 
-      hr
+        hr
 
-      p
-        | A simple
-        |
-        code p
-        |
-        | paragraph.
-      p Item 1
+        p
+          | A simple
+          |
+          code p
+          |
+          | paragraph.
+        p Item 1
 
-      p
-        | The simplest toolbar, with a single element. This
-        | should match the above paragraph, but with additional
-        | vertical spacing (I don't know why; this is probably because we're in c-content).
-      .c-toolbar
-        .c-toolbar__left
-          .c-toolbar__item
-            p Item 1
+        p
+          | A simple
+          |
+          code a
+          |
+          | anchor.
+        a Item 1
 
-      p
-        | The same toolbar, but using a link instead of a paragraph.
-        | The vertical spacing is gone.
-      .c-toolbar
-        .c-toolbar__left
-          .c-toolbar__item
-            a Item 1
+        p
+          | The simplest toolbar, with a single element. This
+          | should match the above paragraph.
+      .c-base
+        .c-toolbar
+          .c-toolbar__left
+            .c-toolbar__item
+              p Item 1
 
-      p
-        | A toolbar with a left item and a right item.
-      .c-toolbar
-        .c-toolbar__left
-          .c-toolbar__item
-            p Item 1
-        .c-toolbar__right
-          .c-toolbar__item
-            p Item 2
+      .c-content
+        p
+          | The same toolbar, but using a link instead of a paragraph.
+      .c-base
+        .c-toolbar
+          .c-toolbar__left
+            .c-toolbar__item
+              a Item 1
 
-      p
-        | A toolbar with two left items.
-      .c-toolbar
-        .c-toolbar__left
-          .c-toolbar__item
-            p Item 1
-          .c-toolbar__item
-            p Item 2
+      .c-content
+        p
+          | A toolbar with a left item and a right item.
+      .c-base
+        .c-toolbar
+          .c-toolbar__left
+            .c-toolbar__item
+              p Item 1
+          .c-toolbar__right
+            .c-toolbar__item
+              p Item 2
 
-      p
-        | A toolbar with two right items. An (empty) c-toolbar__left is optional.
-      .c-toolbar
-        .c-toolbar__right
-          .c-toolbar__item
-            p Item 1
-          .c-toolbar__item
-            p Item 2
+      .c-content
+        p
+          | A toolbar with two left items.
+      .c-base
+        .c-toolbar
+          .c-toolbar__left
+            .c-toolbar__item
+              p Item 1
+            .c-toolbar__item
+              p Item 2
 
-      p
-        | A toolbar with two left items, and two right items.
-      .c-toolbar
-        .c-toolbar__left
-          .c-toolbar__item
-            p Item 1
-          .c-toolbar__item
-            p Item 2
-        .c-toolbar__right
-          .c-toolbar__item
-            p Item 3
-          .c-toolbar__item
-            p Item 4
+      .c-content
+        p
+          | A toolbar with two right items. An (empty) c-toolbar__left is optional.
+      .c-base
+        .c-toolbar
+          .c-toolbar__right
+            .c-toolbar__item
+              p Item 1
+            .c-toolbar__item
+              p Item 2
+
+      .c-content
+        p
+          | A toolbar with two left items, and two right items.
+      .c-base
+        .c-toolbar
+          .c-toolbar__left
+            .c-toolbar__item
+              p Item 1
+            .c-toolbar__item
+              p Item 2
+          .c-toolbar__right
+            .c-toolbar__item
+              p Item 3
+            .c-toolbar__item
+              p Item 4
