--- a/itcss/templates/static-binaries.pug
+++ b/itcss/templates/static-binaries.pug
@@ -4,6 +4,23 @@ html
   head
     link(rel="stylesheet" href="/static/css/main.css")
   body
+    .o-container--small
+      .c-base
+        .u-spacer-top-l
+          .c-toolbar
+            .c-toolbar__left
+              .c-toolbar__item
+                a noteed.com
+              .c-toolbar__item
+                a blog
+              .c-toolbar__item
+                a notes
+              .c-toolbar__item
+                a nix-notes
+              .c-toolbar__item
+                a not-os
+              .c-toolbar__item
+                a videos
     .o-container--small.c-content
       h1 Static binaries
 
