--- a/itcss/templates/static-binaries.pug
+++ b/itcss/templates/static-binaries.pug
@@ -1,51 +1,48 @@
-doctype html
+extends document
 
-html
-  head
-    link(rel="stylesheet" href="/static/css/main.css")
-  body
-    .o-container--small
-      .c-base
-        .u-spacer-top-l
-          .c-toolbar
-            .c-toolbar__left
-              .c-toolbar__item
-                a noteed.com
-              .c-toolbar__item
-                a blog
-              .c-toolbar__item
-                a notes
-              .c-toolbar__item
-                a nix-notes
-              .c-toolbar__item
-                a not-os
-              .c-toolbar__item
-                a videos
-    .o-container--small.c-content
-      h1 Static binaries
+block body
+  .o-container--small
+    .c-base
+      .u-spacer-top-l
+        .c-toolbar
+          .c-toolbar__left
+            .c-toolbar__item
+              a noteed.com
+            .c-toolbar__item
+              a blog
+            .c-toolbar__item
+              a notes
+            .c-toolbar__item
+              a nix-notes
+            .c-toolbar__item
+              a not-os
+            .c-toolbar__item
+              a videos
+  .o-container--small.c-content
+    h1 Static binaries
 
-      p If you consider adopting a programming language, consider one where you can create statically-linked executables. This makes things so much easier.
+    p If you consider adopting a programming language, consider one where you can create statically-linked executables. This makes things so much easier.
 
-      hr
+    hr
 
-      h2 E.g., compared to Docker
+    h2 E.g., compared to Docker
 
-      p With a statically-linked binary, provisioning a program on a remote host is just uploading it. With Docker, you need to install and maintain docker-engine. Ideally you should have a nice way to provision the remote host with Docker, but then, why not use that nice way to provision other stuff directly ?
+    p With a statically-linked binary, provisioning a program on a remote host is just uploading it. With Docker, you need to install and maintain docker-engine. Ideally you should have a nice way to provision the remote host with Docker, but then, why not use that nice way to provision other stuff directly ?
 
-      p Docker is much more than packaging, but it seems a lot of people use it for that purpose.
+    p Docker is much more than packaging, but it seems a lot of people use it for that purpose.
 
-      p By the way, statically-linked executables make building Docker images a breeze.
+    p By the way, statically-linked executables make building Docker images a breeze.
 
-      p If you use Docker to deploy, you probably want a private registry, which is another piece to maintain. Static binaries are trivial to host on a static site. Or to mirror. And so on. Simplicity goes a long way.
+    p If you use Docker to deploy, you probably want a private registry, which is another piece to maintain. Static binaries are trivial to host on a static site. Or to mirror. And so on. Simplicity goes a long way.
 
-      hr.u-spacer-bottom-m
+    hr.u-spacer-bottom-m
 
-      p See also: <a>In praise of simplicity</a>
+    p See also: <a>In praise of simplicity</a>
 
-      hr.u-spacer-bottom-m
+    hr.u-spacer-bottom-m
 
-      p Related: <a>Learn packaging</a>
+    p Related: <a>Learn packaging</a>
 
-      hr.u-spacer-top-l.u-spacer-bottom-l
+    hr.u-spacer-top-l.u-spacer-bottom-l
 
-      p.u-spacer-bottom-m © Võ Minh Thu, 2017-2023.
+    p.u-spacer-bottom-m © Võ Minh Thu, 2017-2023.
