Introduce header and .c-navbar.
I guess header is good semantic HTML, and the .c-navbar adds some
logical structure to the CSS, instead of cheating with a .u-spacer-l.

--- a/itcss/scss/c-content.scss
+++ b/itcss/scss/c-content.scss
@@ -18,9 +18,7 @@
   font-size: 4.8rem;
   line-height: 1.25;
   letter-spacing: -0.05em;
-  margin: 5.3rem 0 3.2rem; // Vertical margin works with c-toolbar and
-                           // u-spacer-top-l for the
-                           // static-binaries.pug example.
+  margin: 3.26rem 0 3.2rem;
 }
 
 .c-content h2 {
