Factor out the main navigation bar.

--- a/itcss/templates/static-binaries.pug
+++ b/itcss/templates/static-binaries.pug
@@ -3,21 +3,7 @@ extends document
 block body
   header
     .o-container--small.c-base
-      .c-navbar
-        .c-toolbar
-          .c-toolbar__left
-            .c-toolbar__item
-              a noteed.com
-            .c-toolbar__item
-              a blog
-            .c-toolbar__item
-              a notes
-            .c-toolbar__item
-              a nix-notes
-            .c-toolbar__item
-              a not-os
-            .c-toolbar__item
-              a videos
+      include includes/main-navbar
 
   .o-container--small.c-content
     h1 Static binaries
