--- a/itcss/templates/includes/main-navbar.pug
+++ b/itcss/templates/includes/main-navbar.pug
@@ -1,7 +1,7 @@
 //-
   The main navigation bar appearing at the top of pages.
 
-.c-navbar
+.c-navbar.c-navbar--main
   .c-toolbar
     .c-toolbar__left
       .c-toolbar__item
