Add example page link to index.

--- a/itcss/templates/index.pug
+++ b/itcss/templates/index.pug
@@ -9,3 +9,4 @@ block body
     ul
       li: a(href="examples/static-binaries.html") Static binaries
       li: a(href="examples/static-binaries-toolbar.html") Static binaries, with toolbar
+      li: a(href="examples/two-thirds-one-third.html") Two thirds / one third layout
