--- a/itcss/templates/examples/grid.pug
+++ b/itcss/templates/examples/grid.pug
@@ -13,6 +13,7 @@ block body
       grid-template-columns: 2fr 1fr;
       margin-right: -15px;
       margin-left: -15px;
+      align-items: baseline;
     }
 
     .the-main-content, .the-sidebar {
