Add missing links to new example pages.

--- a/itcss/templates/index.pug
+++ b/itcss/templates/index.pug
@@ -10,3 +10,5 @@ block body
       li: a(href="examples/static-binaries.html") Static binaries
       li: a(href="examples/static-binaries-toolbar.html") Static binaries, with toolbar
       li: a(href="examples/two-thirds-one-third.html") Two thirds / one third layout
+      li: a(href="examples/grid.html") Two thirds / one third layout (alt)
+      li: a(href="examples/images.html") Image grid
