Bring closer this repo and smart-design.
We add some space below the blog title to accomodate a potential
subtitle (or date and autor) line.

--- a/itcss/templates/contents/static-binaries.pug
+++ b/itcss/templates/contents/static-binaries.pug
@@ -3,7 +3,8 @@
   class. I.e. h1, p, and so on should appear as much as possible without any
   classes.
 
-h1 Static binaries
+.u-spacer-bottom-m
+  h1 Static binaries
 
 p If you consider adopting a programming language, consider one where you can create statically-linked executables. This makes things so much easier.
 
