Import the type scale B specimen.

--- a/struct/templates/index.pug
+++ b/struct/templates/index.pug
@@ -13,3 +13,5 @@ html(dir="ltr", lang="en")
                 ul
                     li
                         a(href="/specimens/type-scale-a.html") Type scale A
+                    li
+                        a(href="/specimens/type-scale-b.html") Type scale B
