--- a/struct/templates/index.pug
+++ b/struct/templates/index.pug
@@ -15,3 +15,5 @@ html(dir="ltr", lang="en")
                         a(href="/specimens/type-scale-a.html") Type scale A
                     li
                         a(href="/specimens/type-scale-b.html") Type scale B
+                    li
+                        a(href="/specimens/type-scale-c.html") Type scale C
